# AdventOfCode2022

./: AoC2022.cabal  ghcid.sh  hie.yaml  release.nix
app/: Main.hs
src/: Day1.hs  Day2.hs  Lib.hs  Part.hs
