cabal-version:      3.0
name:               AoC2022
version:            0.1.0.0
homepage:           https://github.com/mariatsji/AoC2022.git
license:            GPL-3.0-only
license-file:       LICENSE
author:             Sjur Millidahl
maintainer:         sjur.millidahl@gmail.com

category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base ^>=4.15.1.0,
                      attoparsec,
                      mtl,
                      relude,
                      random,
                      scientific,
                      transformers,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators

executable aoc
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.1.0,
        AoC2022,
        attoparsec,
        mtl,
        random,
        relude,
        transformers,
        text
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators
      
